--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Amazon India</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="navbar">
+                
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
