--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="navbar">
-
+                <div class="logo"></div>
             </div>
         </nav>
     </header>
