--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="navbar">
             <div class="nav-logo">
-                <div class="logo"></div>
+                <div class="logo border"></div>
             </div>
         </div>
     </header>
