--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
             <div class="nav-logo">
                 <div class="logo border"></div>
             </div>
+            <div class="navaddress border">
+                <span class="add-first">Deliver to</span>
+                <div class="addsecond">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <span>India</span>
+                </div>
+            </div>
         </div>
     </header>
 </body>
