--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
                     <span>India</span>
                 </div>
             </div>
+            <div class="search-panel">
+                <select class="all-panel">
+                    <option>all</option>
+                </select>
+                <input type="text" placeholder="Search Amazon" />
+                <div class="search-glass">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+            </div>
         </div>
     </header>
 </body>
