add scalability to the search bar

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </div>
             <div class="search-panel">
                 <select class="all-panel">
-                    <option>all</option>
+                    <option>All</option>
                 </select>
-                <input type="text" placeholder="Search Amazon" />
+                <input class="search-bar" type="text" placeholder="Search Amazon" />
                 <div class="search-glass">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
