--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
+            <div class="accounts">
+                <span class="sign-in">Hello, sign in</span>
+                <select class="accounts">
+                    <option>Accounts & Lists</option>
+                </select>
+            </div>
         </div>
     </header>
 </body>
