add return & order box

--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
-            <div class="accounts">
+            <div class="accounts border">
                 <span class="sign-in">Hello, sign in</span>
                 <select class="accounts">
                     <option>Accounts & Lists</option>
                 </select>
+            </div>
+            <div class="return-section border">
+                <span class="return">Returns</span>
+                <span class="orders">& Orders</span>
             </div>
         </div>
     </header>
