--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <span class="return">Returns</span>
                 <span class="orders">& Orders</span>
             </div>
+            <div class="cart-section border">
+                <div class="cart-logo">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </div>
+                <span>Cart</span>
+            </div>
         </div>
     </header>
 </body>
