--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
                 <span>Cart</span>
             </div>
         </div>
+        <nav>
+            <div class="navigation-section">
+                <div class="all">
+                    <i class="fa-solid fa-bars"></i>
+                    <span class="all">All</span>
+                </div>
+            </div>
+        </nav>
     </header>
 </body>
 </html>
