add all-button to navigation bar

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <nav>
             <div class="navigation-section">
-                <div class="all">
+                <div class="all-button">
                     <i class="fa-solid fa-bars"></i>
                     <span class="all">All</span>
                 </div>
