add navigation options to the navigation bar

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
                     <i class="fa-solid fa-bars"></i>
                     <span class="all">All</span>
                 </div>
+                <div class="nav-ops">
+                    <span>Today's Deals</span>
+                    <span>Registry</span>
+                    <span>Prime Video</span>
+                    <span>Gift Cards</span>
+                    <span>Customer Service</span>
+                    <span>Sell</span>
+                </div>
             </div>
         </nav>
     </header>
