--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <nav>
             <div class="navigation-section">
-                <div class="all-button">
+                <div class="all-button border">
                     <i class="fa-solid fa-bars"></i>
                     <span class="all">All</span>
                 </div>
@@ -63,5 +63,12 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="hero-section">
+            <div class="intro">
+                <span>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.    <a class="link" href="https://www.amazon.in/">Click here to go to amazon.in</a></span>
+            </div>                
+        </div>
+    </main>
 </body>
 </html>
