add settings for the first box

--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
                 <span>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery.    <a class="link" target="_blank" href="https://www.amazon.in/">Click here to go to amazon.in</a></span>
             </div>                
         </div>
-        <div class="shop-section">
+        <div class="shop-section" id="shop-section">
             <div class="box">
                 <div class="box-content">
-
+                    <h2>Health & Personal Care</h2>
+                    <div class="box-img" style="background-image: url(images/box2_image.jpg);"></div>
+                    <span class="more"><a href="#shop-section">See more</a></span>
                 </div>
             </div>
             <div class="box">
