add back-to-the top button

--- a/index.html
+++ b/index.html
@@ -128,5 +128,16 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="top-link">
+            <a class="top-g" href="#">Back to the top</a>
+        </div>
+        <div class="bye-bye">
+            <span class="bottom">Conditions of use</span>
+            <span class="bottom">Privacy Data</span>
+            <span class="bottom">Consumer Health Data Privacy enclosure</span>
+            <span class="bottom">&copy;1996-2025, Amazon.com, Inc. or it's affiliates</span>
+        </div>
+    </footer>
 </body>
 </html>
