--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <div class="bye-bye">
             <span class="bottom">Conditions of use</span>
             <span class="bottom">Privacy Data</span>
-            <span class="bottom">Consumer Health Data Privacy enclosure</span>
+            <span class="bottom">Consumer Health Data Privacy enclosure</span> <br />
             <span class="bottom">&copy;1996-2025, Amazon.com, Inc. or it's affiliates</span>
         </div>
     </footer>
